--- a/KrisMobile/res/values/strings.xml
+++ b/KrisMobile/res/values/strings.xml
@@ -89,8 +89,9 @@
     <string name="document_date">Data wystawienia</string>
     <string name="payment_date">Data płatności</string>
     <string name="number">Numer</string>
-    <string name="document_value">Wartość dokumentu</string>  
-    <string name="document_type">Typ dokumentu</string>    
+    <string name="document_value">Wartość dokumentu</string>
+    <string name="document_type">Typ dokumentu</string>
+
     <string-array name="document_types">
         <item>Zamówienie sprzedaży</item>
         <item>Zamówienie zakupu</item>
@@ -99,17 +100,38 @@
         <item>Przyjęcie z magazynu</item>
         <item>Wydanie do magazynu</item>
     </string-array>
-	<string name="payment_form">Forma płatności</string>
-	<string-array name="payment_forms">
-	    <item>Gotówka</item>
-	    <item>Przelew</item>
-	    <item>Pobranie</item>
-	</string-array>
+
+    <string name="payment_form">Forma płatności</string>
+
+    <string-array name="payment_forms">
+        <item>Gotówka</item>
+        <item>Przelew</item>
+        <item>Pobranie</item>
+    </string-array>
+
     <string name="title_activity_tmp_paged">TmpPagedActivity</string>
     <string name="PLN">(PLN)</string>
     <string name="positions">Pozycje</string>
     <string name="header">Nagłówek</string>
     <string name="title_activity_contractor_document">ContracterDocumentsActivity</string>
     <string name="none">Brak</string>
+    <string name="title_activity_items">Towary</string>
+    <string name="title_activity_item">ItemActivity</string>
+    <string name="action_add_item">Dodaj towar</string>
+    <string name="action_edit_item">Edytuj towar</string>
+    <string name="action_save_item">Zapisz towar</string>
+    <string name="action_delete_item">Usuń towar</string>
+    <string name="do_you_want_to_delete_item">Czy chcesz usunąć towar?</string>
+    <string name="item_deleted">Towar usunięty</string>
+    <string name="item_deleted_error">Nie można usunąć towaru</string>
+    <string name="size">Rozmiar</string>
+    <string name="material">Materiał</string>
+    <string name="price">Cena</string>
+    <string name="item_type">Rodzaj towaru</string>
+    <string name="stocks">Zasoby</string>
+    <string name="net">(N)</string>
+    <string name="gross">(B)</string>
+    <string name="title_activity_modify_item">ModifyItemActivity</string>
+    <string name="item_name">Nazwa</string>
 
 </resources>
