Added root of synchronization

--- a/KrisMobile/res/values/strings.xml
+++ b/KrisMobile/res/values/strings.xml
@@ -133,5 +133,7 @@
     <string name="gross">(B)</string>
     <string name="title_activity_modify_item">ModifyItemActivity</string>
     <string name="item_name">Nazwa</string>
+    <string name="synchronization">Synchronizacja</string>
+    <string name="server_address">Adres serwera</string>
 
 </resources>
