Combinations with tabs ;/ (not working) blocked positions and items when not editing.

--- a/KrisMobile/res/values/strings.xml
+++ b/KrisMobile/res/values/strings.xml
@@ -94,11 +94,11 @@
 
     <string-array name="document_types">
         <item>Zamówienie sprzedaży</item>
-        <item>Zamówienie zakupu</item>
+   <!-- <item>Zamówienie zakupu</item> --> 
         <item>Faktura sprzedaży</item>
-        <item>Faktura zakupu</item>
-        <item>Przyjęcie z magazynu</item>
-        <item>Wydanie do magazynu</item>
+   <!-- <item>Faktura zakupu</item> --> 
+   <!-- <item>Przyjęcie do magazynu</item> --> 
+        <item>Wydanie z magazynu</item>
     </string-array>
 
     <string name="payment_form">Forma płatności</string>
@@ -143,4 +143,6 @@
 	<string name="cannot_save_item_without_name">Nie można zapisać towaru bez nazwy</string>
 	<string name="cannot_save_item_without_price">Nie można zapisać towaru bez ceny</string>
 	<string name="cannot_save_document_without_position">Nie można zapisać dokumentu bez pozycji</string>
+	<string name="do_you_want_to_delete_position">Czy chcesz usunać pozycję?</string>
+
 </resources>
