--- a/KrisMobile/res/values/strings.xml
+++ b/KrisMobile/res/values/strings.xml
@@ -157,5 +157,10 @@
     <string name="payment_value">Wartość płatności</string>
     <string name="finalize">Rozlicz</string>
     <string name="cannot_save_payment_value">Nie można zapisać płatności o zerowej wartości</string>
+    <string name="delete_database">Usuń bazę danych</string>
+    <string name="delete_all_data_from_batabase">Usuń wszystkie dane z bazy</string>
+    <string name="database_could_not_be_deleted">Nie udało się usunąć bazy</string>
+    <string name="database_deleted">Baza usunięta</string>
+    <string name="do_you_want_to_delete_database">Czy na pewno chcesz usunąć bazę danych? Spowoduje to usunięcie wszystkich informacji.</string>
 
 </resources>
